fix spacing on new account page

--- a/app/assets/stylesheets/open_account.scss
+++ b/app/assets/stylesheets/open_account.scss
@@ -165,23 +165,14 @@
     display: flex;
     align-items: flex-start;
 
-    .acct-option-headers {
-      height: 190px;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-    }
-    
-    h2 {
-      width: 200px;
-      text-align: right;
-      font-weight: 700;
-      padding-right: 10px;
-    }
-
-    h2:first-of-type {
-      padding-top: 10px;
-    }
+  }
+  
+  h2 {
+    width: 160px;
+    text-align: right;
+    font-weight: 700;
+    padding-right: 10px;
+    padding-top: 10px;
   }
 
   #acct-nickname-field {
